# chat_wr

./: docker-compose.yml
app/: Cargo.toml  Dockerfile
app/src/: main.rs  views.rs
ui/: Dockerfile
ui/static/: index.html  styles.css
