[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "~1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.5.2", features = ["cors"] }
tower = { version = "0.5.0", features = ["timeout"] }
rusqlite = { version = "0.32.0", features = ["bundled"] }